tests/NormalTests/paczka1/small_fuzzy/30056560.err
Error in line 10: iFBs S237 92,0
Error in line 7: S115 S36 38,1
